// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`wp-post mutation macros appends status validation without guard: status-validation-macro 1`] = `
[
  {
    "attributes": {},
    "declares": [
      {
        "attributes": {},
        "key": {
          "attributes": {},
          "name": "strict_types",
          "nodeType": "Identifier",
        },
        "nodeType": "DeclareItem",
        "value": {
          "attributes": {},
          "nodeType": "Scalar_LNumber",
          "value": 1,
        },
      },
    ],
    "nodeType": "Stmt_Declare",
    "stmts": null,
  },
  {
    "attributes": {},
    "name": {
      "attributes": {},
      "nodeType": "Name",
      "parts": [
        "Demo",
        "Rest",
      ],
    },
    "nodeType": "Stmt_Namespace",
    "stmts": [
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:BEGIN AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attrGroups": [],
        "attributes": {},
        "extends": null,
        "flags": 0,
        "implements": [],
        "name": {
          "attributes": {},
          "name": "MacroHarness",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Class",
        "stmts": [
          {
            "attrGroups": [],
            "attributes": {},
            "byRef": false,
            "flags": 0,
            "name": {
              "attributes": {},
              "name": "invoke",
              "nodeType": "Identifier",
            },
            "nodeType": "Stmt_ClassMethod",
            "params": [],
            "returnType": null,
            "stmts": [
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel resource.wpPost.mutation status-validation",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel mutation:status normalise",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {},
                "expr": {
                  "attributes": {},
                  "expr": {
                    "args": [
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "nodeType": "Scalar_String",
                          "value": "status",
                        },
                      },
                    ],
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "name": "get_param",
                      "nodeType": "Identifier",
                    },
                    "nodeType": "Expr_MethodCall",
                    "var": {
                      "attributes": {},
                      "name": "request",
                      "nodeType": "Expr_Variable",
                    },
                  },
                  "nodeType": "Expr_Assign",
                  "var": {
                    "attributes": {},
                    "name": "status",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
              {
                "attributes": {},
                "expr": {
                  "attributes": {},
                  "expr": {
                    "args": [
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "name": "status",
                          "nodeType": "Expr_Variable",
                        },
                      },
                    ],
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "name": "normaliseBooksStatus",
                      "nodeType": "Identifier",
                    },
                    "nodeType": "Expr_MethodCall",
                    "var": {
                      "attributes": {},
                      "name": "this",
                      "nodeType": "Expr_Variable",
                    },
                  },
                  "nodeType": "Expr_Assign",
                  "var": {
                    "attributes": {},
                    "name": "post_status",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
            ],
          },
        ],
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:END AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
    ],
  },
]
`;

exports[`wp-post mutation macros guards status validation when null checks are enabled: status-validation-guarded-macro 1`] = `
[
  {
    "attributes": {},
    "declares": [
      {
        "attributes": {},
        "key": {
          "attributes": {},
          "name": "strict_types",
          "nodeType": "Identifier",
        },
        "nodeType": "DeclareItem",
        "value": {
          "attributes": {},
          "nodeType": "Scalar_LNumber",
          "value": 1,
        },
      },
    ],
    "nodeType": "Stmt_Declare",
    "stmts": null,
  },
  {
    "attributes": {},
    "name": {
      "attributes": {},
      "nodeType": "Name",
      "parts": [
        "Demo",
        "Rest",
      ],
    },
    "nodeType": "Stmt_Namespace",
    "stmts": [
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:BEGIN AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attrGroups": [],
        "attributes": {},
        "extends": null,
        "flags": 0,
        "implements": [],
        "name": {
          "attributes": {},
          "name": "MacroHarness",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Class",
        "stmts": [
          {
            "attrGroups": [],
            "attributes": {},
            "byRef": false,
            "flags": 0,
            "name": {
              "attributes": {},
              "name": "invoke",
              "nodeType": "Identifier",
            },
            "nodeType": "Stmt_ClassMethod",
            "params": [],
            "returnType": null,
            "stmts": [
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel resource.wpPost.mutation status-validation",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel mutation:status normalise",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {},
                "expr": {
                  "attributes": {},
                  "expr": {
                    "args": [
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "nodeType": "Scalar_String",
                          "value": "status",
                        },
                      },
                    ],
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "name": "get_param",
                      "nodeType": "Identifier",
                    },
                    "nodeType": "Expr_MethodCall",
                    "var": {
                      "attributes": {},
                      "name": "request",
                      "nodeType": "Expr_Variable",
                    },
                  },
                  "nodeType": "Expr_Assign",
                  "var": {
                    "attributes": {},
                    "name": "status",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
              {
                "attributes": {},
                "cond": {
                  "attributes": {},
                  "left": {
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "nodeType": "Name",
                      "parts": [
                        "null",
                      ],
                    },
                    "nodeType": "Expr_ConstFetch",
                  },
                  "nodeType": "Expr_BinaryOp_NotIdentical",
                  "right": {
                    "attributes": {},
                    "name": "status",
                    "nodeType": "Expr_Variable",
                  },
                },
                "else": null,
                "elseifs": [],
                "nodeType": "Stmt_If",
                "stmts": [
                  {
                    "attributes": {},
                    "expr": {
                      "attributes": {},
                      "expr": {
                        "args": [
                          {
                            "attributes": {},
                            "byRef": false,
                            "name": null,
                            "nodeType": "Arg",
                            "unpack": false,
                            "value": {
                              "attributes": {},
                              "name": "status",
                              "nodeType": "Expr_Variable",
                            },
                          },
                        ],
                        "attributes": {},
                        "name": {
                          "attributes": {},
                          "name": "normaliseBooksStatus",
                          "nodeType": "Identifier",
                        },
                        "nodeType": "Expr_MethodCall",
                        "var": {
                          "attributes": {},
                          "name": "this",
                          "nodeType": "Expr_Variable",
                        },
                      },
                      "nodeType": "Expr_Assign",
                      "var": {
                        "attributes": {},
                        "dim": {
                          "attributes": {},
                          "nodeType": "Scalar_String",
                          "value": "post_status",
                        },
                        "nodeType": "Expr_ArrayDimFetch",
                        "var": {
                          "attributes": {},
                          "name": "post_data",
                          "nodeType": "Expr_Variable",
                        },
                      },
                    },
                    "nodeType": "Stmt_Expression",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:END AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
    ],
  },
]
`;

exports[`wp-post mutation macros primes cache after mutations: cache-priming-macro 1`] = `
[
  {
    "attributes": {},
    "declares": [
      {
        "attributes": {},
        "key": {
          "attributes": {},
          "name": "strict_types",
          "nodeType": "Identifier",
        },
        "nodeType": "DeclareItem",
        "value": {
          "attributes": {},
          "nodeType": "Scalar_LNumber",
          "value": 1,
        },
      },
    ],
    "nodeType": "Stmt_Declare",
    "stmts": null,
  },
  {
    "attributes": {},
    "name": {
      "attributes": {},
      "nodeType": "Name",
      "parts": [
        "Demo",
        "Rest",
      ],
    },
    "nodeType": "Stmt_Namespace",
    "stmts": [
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:BEGIN AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attrGroups": [],
        "attributes": {},
        "extends": null,
        "flags": 0,
        "implements": [],
        "name": {
          "attributes": {},
          "name": "MacroHarness",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Class",
        "stmts": [
          {
            "attrGroups": [],
            "attributes": {},
            "byRef": false,
            "flags": 0,
            "name": {
              "attributes": {},
              "name": "invoke",
              "nodeType": "Identifier",
            },
            "nodeType": "Stmt_ClassMethod",
            "params": [],
            "returnType": null,
            "stmts": [
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel resource.wpPost.mutation cache-priming",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel mutation:cache prime",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel cache:wp-post prime",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {},
                "expr": {
                  "attributes": {},
                  "expr": {
                    "args": [
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "name": "post_id",
                          "nodeType": "Expr_Variable",
                        },
                      },
                    ],
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "nodeType": "Name",
                      "parts": [
                        "get_post",
                      ],
                    },
                    "nodeType": "Expr_FuncCall",
                  },
                  "nodeType": "Expr_Assign",
                  "var": {
                    "attributes": {},
                    "name": "post",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
              {
                "attributes": {},
                "cond": {
                  "attributes": {},
                  "expr": {
                    "attributes": {},
                    "class": {
                      "attributes": {},
                      "nodeType": "Name",
                      "parts": [
                        "WP_Post",
                      ],
                    },
                    "expr": {
                      "attributes": {},
                      "name": "post",
                      "nodeType": "Expr_Variable",
                    },
                    "nodeType": "Expr_Instanceof",
                  },
                  "nodeType": "Expr_BooleanNot",
                },
                "else": null,
                "elseifs": [],
                "nodeType": "Stmt_If",
                "stmts": [
                  {
                    "attributes": {},
                    "expr": {
                      "args": [
                        {
                          "attributes": {},
                          "byRef": false,
                          "name": null,
                          "nodeType": "Arg",
                          "unpack": false,
                          "value": {
                            "attributes": {},
                            "nodeType": "Scalar_String",
                            "value": "wpk_books_load_failed",
                          },
                        },
                        {
                          "attributes": {},
                          "byRef": false,
                          "name": null,
                          "nodeType": "Arg",
                          "unpack": false,
                          "value": {
                            "attributes": {},
                            "nodeType": "Scalar_String",
                            "value": "Unable to load created Book.",
                          },
                        },
                        {
                          "attributes": {},
                          "byRef": false,
                          "name": null,
                          "nodeType": "Arg",
                          "unpack": false,
                          "value": {
                            "attributes": {},
                            "items": [
                              {
                                "attributes": {},
                                "byRef": false,
                                "key": {
                                  "attributes": {},
                                  "nodeType": "Scalar_String",
                                  "value": "status",
                                },
                                "nodeType": "Expr_ArrayItem",
                                "unpack": false,
                                "value": {
                                  "attributes": {},
                                  "nodeType": "Scalar_LNumber",
                                  "value": 500,
                                },
                              },
                            ],
                            "nodeType": "Expr_Array",
                          },
                        },
                      ],
                      "attributes": {},
                      "class": {
                        "attributes": {},
                        "nodeType": "Name",
                        "parts": [
                          "WP_Error",
                        ],
                      },
                      "nodeType": "Expr_New",
                    },
                    "nodeType": "Stmt_Return",
                  },
                ],
              },
              {
                "attributes": {},
                "expr": {
                  "args": [
                    {
                      "attributes": {},
                      "byRef": false,
                      "name": null,
                      "nodeType": "Arg",
                      "unpack": false,
                      "value": {
                        "attributes": {},
                        "name": "post",
                        "nodeType": "Expr_Variable",
                      },
                    },
                    {
                      "attributes": {},
                      "byRef": false,
                      "name": null,
                      "nodeType": "Arg",
                      "unpack": false,
                      "value": {
                        "attributes": {},
                        "name": "request",
                        "nodeType": "Expr_Variable",
                      },
                    },
                  ],
                  "attributes": {},
                  "name": {
                    "attributes": {},
                    "name": "prepareBooksResponse",
                    "nodeType": "Identifier",
                  },
                  "nodeType": "Expr_MethodCall",
                  "var": {
                    "attributes": {},
                    "name": "this",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Return",
              },
            ],
          },
        ],
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:END AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
    ],
  },
]
`;

exports[`wp-post mutation macros syncs meta and taxonomies with metadata comments: sync-mutations-macro 1`] = `
[
  {
    "attributes": {},
    "declares": [
      {
        "attributes": {},
        "key": {
          "attributes": {},
          "name": "strict_types",
          "nodeType": "Identifier",
        },
        "nodeType": "DeclareItem",
        "value": {
          "attributes": {},
          "nodeType": "Scalar_LNumber",
          "value": 1,
        },
      },
    ],
    "nodeType": "Stmt_Declare",
    "stmts": null,
  },
  {
    "attributes": {},
    "name": {
      "attributes": {},
      "nodeType": "Name",
      "parts": [
        "Demo",
        "Rest",
      ],
    },
    "nodeType": "Stmt_Namespace",
    "stmts": [
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:BEGIN AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attrGroups": [],
        "attributes": {},
        "extends": null,
        "flags": 0,
        "implements": [],
        "name": {
          "attributes": {},
          "name": "MacroHarness",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Class",
        "stmts": [
          {
            "attrGroups": [],
            "attributes": {},
            "byRef": false,
            "flags": 0,
            "name": {
              "attributes": {},
              "name": "invoke",
              "nodeType": "Identifier",
            },
            "nodeType": "Stmt_ClassMethod",
            "params": [],
            "returnType": null,
            "stmts": [
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel resource.wpPost.mutation sync-meta",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel mutation:meta update",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {},
                "expr": {
                  "args": [
                    {
                      "attributes": {},
                      "byRef": false,
                      "name": null,
                      "nodeType": "Arg",
                      "unpack": false,
                      "value": {
                        "attributes": {},
                        "name": "post_id",
                        "nodeType": "Expr_Variable",
                      },
                    },
                    {
                      "attributes": {},
                      "byRef": false,
                      "name": null,
                      "nodeType": "Arg",
                      "unpack": false,
                      "value": {
                        "attributes": {},
                        "name": "request",
                        "nodeType": "Expr_Variable",
                      },
                    },
                  ],
                  "attributes": {},
                  "name": {
                    "attributes": {},
                    "name": "syncBooksMeta",
                    "nodeType": "Identifier",
                  },
                  "nodeType": "Expr_MethodCall",
                  "var": {
                    "attributes": {},
                    "name": "this",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel resource.wpPost.mutation sync-taxonomies",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {
                  "comments": [
                    {
                      "nodeType": "Comment",
                      "text": "// @wp-kernel mutation:taxonomies update",
                    },
                  ],
                },
                "nodeType": "Stmt_Nop",
              },
              {
                "attributes": {},
                "expr": {
                  "attributes": {},
                  "expr": {
                    "args": [
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "name": "post_id",
                          "nodeType": "Expr_Variable",
                        },
                      },
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "name": "request",
                          "nodeType": "Expr_Variable",
                        },
                      },
                    ],
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "name": "syncBooksTaxonomies",
                      "nodeType": "Identifier",
                    },
                    "nodeType": "Expr_MethodCall",
                    "var": {
                      "attributes": {},
                      "name": "this",
                      "nodeType": "Expr_Variable",
                    },
                  },
                  "nodeType": "Expr_Assign",
                  "var": {
                    "attributes": {},
                    "name": "taxonomy_result",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
              {
                "attributes": {},
                "cond": {
                  "args": [
                    {
                      "attributes": {},
                      "byRef": false,
                      "name": null,
                      "nodeType": "Arg",
                      "unpack": false,
                      "value": {
                        "attributes": {},
                        "name": "taxonomy_result",
                        "nodeType": "Expr_Variable",
                      },
                    },
                  ],
                  "attributes": {},
                  "name": {
                    "attributes": {},
                    "nodeType": "Name",
                    "parts": [
                      "is_wp_error",
                    ],
                  },
                  "nodeType": "Expr_FuncCall",
                },
                "else": null,
                "elseifs": [],
                "nodeType": "Stmt_If",
                "stmts": [
                  {
                    "attributes": {},
                    "expr": {
                      "attributes": {},
                      "name": "taxonomy_result",
                      "nodeType": "Expr_Variable",
                    },
                    "nodeType": "Stmt_Return",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:END AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
    ],
  },
]
`;
